export default interface EstadoHabitacion {
  seleccionar(): void;
  cambiarEstado(): void;
}
