import Habitacion from "../Abstracciones/habitacion";

export default class Doble extends Habitacion {}
