import Habitacion from "../Abstracciones/habitacion";

export default class Simple extends Habitacion {}
