import Habitacion from "../Abstracciones/habitacion";

export default class Suite extends Habitacion {}
