export default class Cliente {}
